feat: show image pull progress
